--- a/crochet_blaise/src/components/Grid.css
+++ b/crochet_blaise/src/components/Grid.css
@@ -1,4 +1,14 @@
-.grid {
+grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .color-picker {
+    margin-bottom: 10px;
+  }
+  
+  .grid {
     display: flex;
     flex-direction: column;
   }
@@ -25,4 +35,3 @@
     height: 100%;
     box-sizing: border-box;
   }
-  
