--- a/crochet_blaise/src/App.css
+++ b/crochet_blaise/src/App.css
@@ -4,29 +4,6 @@
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
@@ -39,4 +16,31 @@
 
 .read-the-docs {
   color: #888;
+}
+
+h1 {
+  font-size: calc(1.5rem + 1vw);
+}
+
+.nav {
+  position: absolute;
+  top:0px;
+  border: 1.5px solid greenyellow;
+  display: flex; 
+  gap: 10vw;
+  margin: 0 auto;
+  
+}
+
+.nav a {
+  text-decoration: none;
+  color: black;
+  font-size: calc(1.5rem + 1vw);
+  font-style: italic;
+  justify-content: center;
+  
+}
+
+.nav a:hover {
+  color:lightgreen
 }
