--- a/crochet_blaise/src/App.css
+++ b/crochet_blaise/src/App.css
@@ -2,8 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  
+  text-align: center;  
 }
 
 body {
@@ -24,14 +23,15 @@ body {
 }
 
 h1 {
-  font-size: calc(1.5rem + 1vw);
-  
-    font-family: "Permanent Marker", cursive;
-    font-weight: 400;
-    font-style: normal;
-  
-}
+  font-size: calc(1.5rem + 1vw);  
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+  } 
 
+p {
+  font-size: calc(1.5rem + 1vw);
+}
 
 .nav {
   position: fixed;
@@ -42,10 +42,8 @@ h1 {
   display: flex; 
   gap: 10vw;
   background-color: #f48c06;
-  
- 
-  
 }
+
 .nav a {
   text-decoration: none;
   color: black;
@@ -55,11 +53,15 @@ h1 {
   font-style: normal;
   justify-content: center;
   margin: 0 auto;
-  
-  
-}
+} 
+
 .nav a:hover {
   color:lightgreen;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0px;
 }
 
 .home {
@@ -85,7 +87,7 @@ h1 {
 
 
 .card {
-  background: white;
+  background: #118ab2;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -93,7 +95,7 @@ h1 {
   width: 30vw;
   padding: 16px;  
   margin: 0 auto;
-  font-size: calc(0.5rem + 1vw);
+  font-size: calc(0.5rem + 1vw);  
 }
 
 .card:hover {
@@ -107,39 +109,22 @@ h1 {
   object-fit: cover;
 }
 
-.container {
-  position: relative;
-  background: #2c3e50;
-  height: 50vh;
-}
+@media only screen and (max-width: 600px) {
+  .card{
+    font-size: 16px;
 
-.wave {
-  position: absolute;
-  height: 141px;
-  width: 100%;
-  background: #2c3e50;
-  bottom: 0;
-}
+  }
+  h1 {
+    font-size: 16px;
 
-.wave::before, .wave::after {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-}
+  }
+  p {
+    font-size: 16px;
 
-.wave::before {
-  width: 55%;
-  height: 109%;
-  background-color: #fff;
-  right: -1.5%;
-  top: 60%;
-}
-.wave::after {
-  width: 55%;
-  height: 100%;
-  background-color: #2c3e50;
-  left: -1.5%;
-  top: 40%;
+  }
+  .home {
+    font-size: 16px;
+
+  }
 }
 
